--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,8 +18,18 @@ jobs:
       - run: |
           sudo apt-get update -y
           sudo apt-get install -y ninja-build libgtk-3-dev webkit2gtk-4.1
-      - run: flutter build apk --debug
+      - name: Decode Keystore
+        env:
+          ENCODED_KEYSTORE: ${{ secrets.RELEASE_KEYSTORE_BASE64 }}
+          KEY_PROPERTIES: ${{ secrets.RELEASE_KEY_PROPERTIES }}
+        run: |
+          echo $ENCODED_KEYSTORE > keystore_base64.txt
+          base64 -d keystore_base64.txt > /home/runner/upload-keystore.jks
+          cat << EOF > android/key.properties
+          ${{ secrets.RELEASE_KEY_PROPERTIES }}
+          EOF
+      - run: flutter build apk
       - uses: actions/upload-artifact@v4
         with:
           name: app-android
-          path: build/app/outputs/flutter-apk
+          path: build/app/outputs/apk/release
